--- a/assets/sass/pages/_index.scss
+++ b/assets/sass/pages/_index.scss
@@ -1054,6 +1054,15 @@ background-repeat: no-repeat;
                          font-weight: 500;
                          text-align: left;
                         letter-spacing: 1.5px;
+                        &.syan{
+                            color: #00d8be;
+                        }
+                        &.f18c{
+                            color: #f18c33;
+                        }
+                        &.syan2{
+                            color: #33abd1;
+                        }
     
                     }
                     .heading-small_fr{
@@ -1276,7 +1285,7 @@ background-repeat: no-repeat;
                         margin-bottom: 100px;
                         padding-right: 40px;
                         width: 71%;
-                        margin-left: 40px;
+                        margin-left: 58px;
                         border-top-left-radius: 8px;
                         border-top-right-radius:8px ;
     
@@ -1288,6 +1297,93 @@ background-repeat: no-repeat;
             }
         }
     }
+}
+
+
+
+.section4{
+    background-color: #1B1734;
+    color: white;
+    display: flex;
+   .sc_4{
+.sc_4_row{
+    .sc_4_col{
+        
+        margin-top: 100px;
+        margin-bottom: 24px;
+        display: flex;
+        justify-content: center;
+        .sc_4h2{
+            text-align: center;
+            max-width: 540px;
+            font-size: 48px;
+    line-height: 120%;
+    font-weight: 600;
+    margin-bottom: 55px;
+        }
+      
+        }
+            .sc_4_2{
+                text-align: center;
+                    // font-size: 48px;
+                    font-weight: 600;
+                    display: flex;
+                    justify-content: space-around;
+                    text-align: left;
+                    margin-left: 20px;
+                .dsc_4{
+                    // padding: 40px;
+
+                    .whitesc_4{
+                        font-size: 20px;
+                        line-height: 150%;
+                        font-weight: 500;
+                    }
+              
+                .p-div{
+                  .night40sc_4{
+                    max-width: 80%;
+                    min-height: auto;
+                    min-width: auto;
+                    margin-top: 10px;
+                    margin-bottom:103px;
+                    color: #adaabf;
+                    font-size: 20px;
+                    font-weight: 300;
+
+                  }
+              }
+              
+            }
+            }
+           
+}
+   }
+   .book{
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    // text-align: center;
+    // display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+    a{
+        text-decoration: none;
+        color: white;
+        padding: 16px 32px;
+        font-size: 17px;
+        background-color: #5B35D5;
+        border: 1px solid transparent;
+        border-radius: 8px;
+        // margin-bottom: 100px;
+        // transform:;
+        &:hover{
+            background-color:#7460ef ;
+
+        }
+    
+    }}
 }
 
 
