--- a/assets/sass/pages/_index.scss
+++ b/assets/sass/pages/_index.scss
@@ -3058,6 +3058,273 @@ margin-right: 20px;
 
 
 
+///login///
+.login_start{
+background-color: white;
+    .left_side_login{
+        background-color: hsl(240, 40%, 98%);
+        padding: 0 95px;
+        text-align: center;
+        .login_logo{
+            margin-top: 30px ;        
+        }
+        .p_first{
+            margin-top: 260px;
+            margin-bottom: 50px;
+            color: rgb(91, 85, 127);
+            font-size: 24px;
+            font-weight: 600;
+            padding: 0 50px;
+        }
+        .p_second{
+            color: rgb(132, 128, 159);
+            font-size: 16px;
+            font-weight: 600;
+            margin-bottom: 50px;
+
+        }
+        .svg_end{
+            margin-bottom: 9 0px;
+        }
+
+    }
+    .right_side_col{
+        padding-left: 203px;
+        margin-top: 119px;
+        .right_side{
+            width: 350px;
+            background-color: white;
+            
+            
+             .bqPRPL{
+                    font-size: 32px;
+    line-height: 140%;
+    font-weight: 600;
+                    
+                }
+                .hcqfvN{
+                    margin-top: 32px;
+                    font-size: 16px;
+                    line-height: 150%;
+                    font-weight: 400;
+                    margin-bottom: 30px;
+                }
+            
+        
+        input{
+            display: block;
+           width: 100%;
+        padding: 8px 16px; 
+        border-radius: 4px; 
+        border: 1px solid;
+        margin-bottom: 20px;
+     }
+        .login_btn{
+            color: white;
+            margin-top: 25px;
+            background-color: #5B35D5;
+        }
+        a{
+            color:blue;
+            text-decoration-line: underline;
+        }
+        hr{
+            width: 60%;
+        }
+    }
+}}
+
+@media screen and (max-width:1079px) {
+    .login_start{
+       
+        background-color: white;
+        .login_row{
+            display: flex;
+            flex-direction: column;
+            
+            .left_side_login{
+                background-color: hsl(240, 40%, 98%);
+                padding: 0 95px;
+                text-align: center;
+                .login_logo{
+                    float: left;       
+                }
+                .p_first{
+                    display: none;
+                    margin-top: 260px;
+                    margin-bottom: 50px;
+                    color: rgb(91, 85, 127);
+                    font-size: 24px;
+                    font-weight: 600;
+                    padding: 0 50px;
+                }
+                .p_second{
+                    display: none;
+                    color: rgb(132, 128, 159);
+                    font-size: 16px;
+                    font-weight: 600;
+                    margin-bottom: 50px;
+        
+                }
+                .svg_end{
+                    display: none;
+                    margin-bottom: 9 0px;
+                }
+        
+            }
+            .right_side_col{
+                // justify-content: center;
+                // padding-left: 350px;
+                // margin-top: 35px;
+                margin: 30px auto;
+                
+                .right_side{
+                    width: 350px;
+                    background-color: white;
+                    
+                    
+                     .bqPRPL{
+                            font-size: 32px;
+            line-height: 140%;
+            font-weight: 600;
+                            
+                        }
+                        .hcqfvN{
+                            margin-top: 32px;
+                            font-size: 16px;
+                            line-height: 150%;
+                            font-weight: 400;
+                            margin-bottom: 30px;
+                        }
+                    
+                
+                input{
+                    display: block;
+                   width: 100%;
+                padding: 8px 16px; 
+                border-radius: 4px; 
+                border: 1px solid;
+                margin-bottom: 20px;
+             }
+                .login_btn{
+                    color: white;
+                    margin-top: 25px;
+                    background-color: #5B35D5;
+                }
+                a{
+                    color:blue;
+                    text-decoration-line: underline;
+                }
+                hr{
+                    width: 60%;
+                }
+            }
+        }
+        }
+    
+    
+    }
+        
+}
+@media screen and (max-width:992px) {
+    .login_start{
+       
+        background-color: white;
+        .login_row{
+            display: flex;
+            flex-direction: column;
+            
+            .left_side_login{
+                background-color: hsl(240, 40%, 98%);
+                padding: 0 95px;
+                text-align: center;
+                .login_logo{
+                    float: left;       
+                }
+                .p_first{
+                    display: none;
+                    margin-top: 260px;
+                    margin-bottom: 50px;
+                    color: rgb(91, 85, 127);
+                    font-size: 24px;
+                    font-weight: 600;
+                    padding: 0 50px;
+                }
+                .p_second{
+                    display: none;
+                    color: rgb(132, 128, 159);
+                    font-size: 16px;
+                    font-weight: 600;
+                    margin-bottom: 50px;
+        
+                }
+                .svg_end{
+                    display: none;
+                    margin-bottom: 9 0px;
+                }
+        
+            }
+            .right_side_col{
+                // justify-content: center;
+                // padding-left: 350px;
+                // margin-top: 35px;
+                // margin: 30px 120px;
+                
+                .right_side{
+                    width: 350px;
+                    background-color: white;
+                    
+                    
+                     .bqPRPL{
+                            font-size: 32px;
+            line-height: 140%;
+            font-weight: 600;
+                            
+                        }
+                        .hcqfvN{
+                            margin-top: 32px;
+                            font-size: 16px;
+                            line-height: 150%;
+                            font-weight: 400;
+                            margin-bottom: 30px;
+                        }
+                    
+                
+                input{
+                    display: block;
+                   width: 100%;
+                padding: 8px 16px; 
+                border-radius: 4px; 
+                border: 1px solid;
+                margin-bottom: 20px;
+             }
+                .login_btn{
+                    color: white;
+                    margin-top: 25px;
+                    background-color: #5B35D5;
+                }
+                a{
+                    color:blue;
+                    text-decoration-line: underline;
+                }
+                hr{
+                    width: 60%;
+                }
+            }
+        }
+        }
+    
+    
+    }
+        
+}
+
+
+
+
+
+
+
 
 
 
